# artshelter-backend

./: .env  db.sqlite3  pyproject.toml  requirements.txt
.ebextensions/: 10_python.config  django.config
common/: models.py
concerts/: admin.py  models.py  serializers.py  urls.py  views.py
concerts/migrations/: 0001_initial.py  0002_concert_booking_url_alter_concert_context.py  0002_initial.py  0003_rename_context_concert_content.py  0004_alter_concert_writer.py  0005_alter_concert_date.py
config/: settings.py  urls.py
edus/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
edus/migrations/: 0001_initial.py  0002_education_content.py  0003_remove_education_content.py
notices/: admin.py  models.py  serializers.py  urls.py  views.py
notices/migrations/: 0001_initial.py  0002_alter_notice_title_alter_notice_visited_and_more.py  0002_initial.py  0003_alter_notice_visited.py  0004_notice_is_pinned.py  0005_alter_notice_is_pinned.py
qnas/: admin.py  models.py  serializers.py  urls.py  views.py
qnas/migrations/: 0001_initial.py  0002_alter_question_options_question_person_and_more.py  0002_question_is_answered.py
users/: admin.py  models.py  serializers.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_alter_user_nickname.py
